# GeneralServer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  testnet.template
.cicd/metrics/: test-metrics.js
CMakeModules/: EosioTester.cmake.in  EosioTesterBuild.cmake.in  package.cmake
docs/01_nodeos/02_usage/02_node-setups/: 00_producing-node.md
docs/01_nodeos/02_usage/03_development-environment/: 01_local-multi-node-testnet.md
docs/01_nodeos/03_plugins/chain_plugin/: index.md
docs/01_nodeos/03_plugins/producer_plugin/: index.md
docs/02_cleos/02_how-to-guides/: how-to-get-account-information.md
docs/02_cleos/03_command-reference/get/: account.md  schedule.md
docs/02_cleos/03_command-reference/wallet/: keys.md
eosio-wasm-spec-tests/generator/: eosio_test_generator.cpp  wasm.py
libraries/: CMakeLists.txt
libraries/chain/: CMakeLists.txt  abi_serializer.cpp  allowlisted_intrinsics.cpp  apply_context.cpp  authorization_manager.cpp  block_header.cpp  block_header_state.cpp  block_state.cpp  chain_config.cpp  chain_id_type.cpp  controller.cpp  eosio_contract.cpp  eosio_contract_abi.cpp  fork_database.cpp  genesis_intrinsics.cpp  genesis_state.cpp  genesis_state_root_key.cpp.in  name.cpp  platform_timer_accuracy.cpp  platform_timer_asio_fallback.cpp  platform_timer_macos.cpp  platform_timer_posix.cpp  platform_timer_posix_test.c  protocol_state_object.cpp  resource_limits.cpp  thread_utils.cpp  transaction.cpp  transaction_context.cpp  wasm_eosio_validation.cpp  wasm_interface.cpp
libraries/chain/include/eosio/chain/: abi_serializer.hpp  account_object.hpp  allowlisted_intrinsics.hpp  apply_context.hpp  authorization_manager.hpp  block_header.hpp  block_header_state.hpp  block_state.hpp  chain_snapshot.hpp  config.hpp  contract_table_objects.hpp  contract_types.hpp  controller.hpp  eosio_contract.hpp  exceptions.hpp  fixed_bytes.hpp  fork_database.hpp  global_property_object.hpp  name.hpp  producer_schedule.hpp  protocol_state_object.hpp  symbol.hpp  transaction_context.hpp  types.hpp  wasm_eosio_injection.hpp  wasm_eosio_validation.hpp  wasm_interface.hpp  wasm_interface_private.hpp
libraries/chain/include/eosio/chain/webassembly/: eos-vm-oc.hpp  eos-vm.hpp  wabt.hpp
libraries/chain/include/eosio/chain/webassembly/eos-vm-oc/: code_cache.hpp  intrinsic_mapping.hpp
libraries/chain/include/potato/chain/: account_object.hpp  action.hpp  authority.hpp  block.hpp  block_header.hpp  block_timestamp.hpp  chain_config.hpp  chain_id_type.hpp  config.hpp  controller.hpp  database_header_object.hpp  exceptions.hpp  fork_database.hpp  genesis_state.hpp  global_property_object.hpp  name.hpp  platform_timer.hpp  platform_timer_accuracy.hpp  thread_utils.hpp  transaction.hpp  types.hpp
libraries/chain/webassembly/: eos-vm.cpp  wabt.cpp
libraries/chain/webassembly/eos-vm-oc/: code_cache.cpp  executor.cpp
libraries/chainbase/: CMakeLists.txt
libraries/testing/: tester.cpp
libraries/testing/include/eosio/testing/: tester.hpp
libraries/version/include/potato/version/: version.hpp
libraries/version/src/: version.cpp  version_impl.cpp.in  version_impl.hpp
plugins/: CMakeLists.txt
plugins/chain_api_plugin/: chain.swagger.yaml  chain_api_plugin.cpp
plugins/chain_plugin/: CMakeLists.txt  account_query_db.cpp  chain_plugin.cpp
plugins/chain_plugin/include/eosio/chain_plugin/: chain_plugin.hpp
plugins/chain_plugin/include/potato/chain_plugin/: chain_plugin.hpp
plugins/http_plugin/: CMakeLists.txt  http_plugin.cpp
plugins/http_plugin/include/potato/http_plugin/: http_plugin.hpp
plugins/mongo_db_plugin/: mongo_db_plugin.cpp
plugins/net_plugin/: CMakeLists.txt  net_plugin.cpp
plugins/net_plugin/include/potato/net_plugin/: net_plugin.hpp  protocol.hpp
plugins/producer_api_plugin/: producer.swagger.yaml  producer_api_plugin.cpp
plugins/producer_plugin/: CMakeLists.txt  producer_plugin.cpp
plugins/producer_plugin/include/eosio/producer_plugin/: producer_plugin.hpp
plugins/producer_plugin/include/potato/producer_plugin/: producer_plugin.hpp
plugins/state_history_plugin/: state_history_plugin.cpp  state_history_plugin_abi.cpp
plugins/state_history_plugin/include/eosio/state_history_plugin/: state_history_log.hpp  state_history_serialization.hpp
plugins/wallet_plugin/: wallet_plugin.cpp
plugins/wallet_plugin/include/eosio/wallet_plugin/: wallet.hpp  wallet_api.hpp  wallet_manager.hpp
programs/: CMakeLists.txt
programs/cleos/: CMakeLists.txt  main.cpp
programs/example/: CMakeLists.txt  config.hpp.in  main.cpp  muilit_indexv2.hpp  muilt_index.hpp  name.hpp  namev2.hpp  namev3.hpp  wabt.hpp
programs/keosd/: CMakeLists.txt  main.cpp
programs/nodeos/: CMakeLists.txt  config.hpp.in  main.cpp
scripts/: .build_vars  build.sh  eosio_build.sh  eosio_build_centos.sh  eosio_build_centos7_deps  eosio_build_ubuntu.sh  eosio_build_ubuntu_deps  eosio_install.sh  eosio_uninstall.sh  generate_bottle.sh  generate_deb.sh  generate_rpm.sh
scripts/helpers/: eosio.sh  general.sh
tests/: CMakeLists.txt  Cluster.py  Node.py  consensus-validation-malicious-producers.py  nodeos_chainbase_allocation_test.py  nodeos_run_test.py
tests/bash-bats/: eosio_build_ubuntu.sh
tests/fc/: CMakeLists.txt  test_fc.cpp
tests/p2p_tests/dawn_515/: test.sh
tutorials/bios-boot-tutorial/: bios-boot-tutorial.py
unittests/: abi_tests.cpp  allowlist_denylist_tests.cpp  api_tests.cpp  auth_tests.cpp  producer_schedule_tests.cpp  snapshot_tests.cpp  unapplied_transaction_queue_tests.cpp
